# irisc

./: .gitignore  CMakeLists.txt  README.md  grammar.txt  replxx_history.txt  transition_table.txt
src/: error.h  main.cpp
src/cmd/: constants.h  repl.cpp  repl.h  util.c
src/emulator/: constants.h  emulator.cpp  emulator.h  heap.cpp  heap.h  registers.cpp  registers.h  stack.cpp  stack.h
src/emulator/gui/: constants.h  editor.cpp  editor.h  gui.h  heap.cpp  instruction.cpp  instruction.h  memory.cpp  memory.h  output.h  registers.cpp  registers.h  stack.cpp  stack.h
src/emulator/gui/widgets/: hoverbox.cpp  hoverbox.h
src/emulator/windows/: gui.h  heap.h  instruction.cpp  instruction.h  memory.cpp  memory.h  registers.cpp  registers.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: constants.h  parser.cpp  parser.h  syntax.cpp  syntax.h
src/repl/: constants.h  repl.cpp  repl.h  util.c  util.h
src/ui/: constants.h  editor.cpp  editor.h  repl.cpp
src/widgets/: hoverbox.cpp  hoverbox.h
tests/: lexer.cpp  parser.cpp  vm.cpp
